# todo

./: .env.development  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/tests/: conftest.py  test_todolist_endpoints.py  test_todolist_serializer.py
todo/: settings.py  urls.py
