
[tool.poetry]
name = "todo"
version = "0.1.0"
description = "Todo List Project"
authors = ["Marlon Leite <marlonleite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
python-decouple = "^3.4"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
pytest-mock = "^3.6.1"
model-bakery = "^1.3.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
